started with basic html and created css file

--- a/first.html
+++ b/first.html
@@ -1,1 +1,13 @@
-"html></html>" 
+<html>
+<head>
+<link rel="stylesheet" href="Mystyle.css">
+</head>
+<body>
+<h1>this is my very first heading</h1>
+<h2>this is my second heading</h2>
+<h6>this is the lowest heading</h6>
+<p id="first">this is my first paragraph</p>
+<p style="color:red">this is my first paragraph</p>
+<
+</body>
+</html>
