--- a/first.html
+++ b/first.html
@@ -8,6 +8,15 @@
 <h6>this is the lowest heading</h6>
 <p id="first">this is my first paragraph</p>
 <p style="color:red">this is my first paragraph</p>
-<
+<table border="1">
+<tr>
+<th>First name</th>
+<th>Last name</th>
+</tr>
+<tr>
+<td>John</td>
+<td>Doe</td>
+</tr>
+</table>
 </body>
 </html>
