--- a/first.html
+++ b/first.html
@@ -18,5 +18,10 @@
 <td>Doe</td>
 </tr>
 </table>
+<ul>
+<li>pierwszy element</li>
+<li>drugi element</li>
+<li>trzeci element</li>
+</ul>
 </body>
 </html>
