added first form

--- a/first.html
+++ b/first.html
@@ -23,5 +23,17 @@
 <li>drugi element</li>
 <li>trzeci element</li>
 </ul>
+<form>
+<label>First name:</label><br>
+<input type="text" value="John">
+<br>
+<label>Last name:</label>
+<br>
+<input type="text" value="Doe">
+<br>
+<input type=:submit" value="Kliknij"
+</form>
+
+
 </body>
 </html>
