added first JS script

--- a/first.html
+++ b/first.html
@@ -19,7 +19,7 @@
 </tr>
 </table>
 <ul>
-<li>pierwszy element</li>
+<li id="demo">pierwszy element</li>
 <li>drugi element</li>
 <li>trzeci element</li>
 </ul>
@@ -36,6 +36,9 @@
 
 <iframe src="demo_iframe.htm" style="height:200px;width:300px"></iframe>
 
+<script>
+document.getElementById("demo").innerHTML="Hello JS!";
+</script>
 
 </body>
 </html>
